app/assets/stylesheets/topnav.scss
@import 'bootstrap/functions', 'bootstrap/variables', 'bootstrap/mixins';
@import './brand_font';

$brand: #093552;
$brand_text: #fff;

#topnavbar {
	font-size: 13px;
	border-top: $brand_text 5px solid;
	padding-top: 0.25rem;
	padding-bottom: 0.25rem;
	.icon-columbia-crown {
		padding-right:.25em;
	}
	.nav-link {
		color: $brand_text;
	}
	background-color: $brand;
	#navbar-container {
		padding: 0 10px;
		height:100%;
		.navlist-padded {
			position: relative;
			display: block;
			padding: 10px 15px;
		}
	}
	height: 50px;
	#crowndown-nosearch {
		height: 39px;
		padding-left: 0;
		.dropdown-toggle {
			@extend %extend_brand_font;
			padding-right: 4px;
			padding-left: 0;
			font-size: 16px;
			line-height: 120%;
			letter-spacing: 0;
			font-weight: normal;
			margin-top: 2px;
			color: $brand_text;
		}
	}
	.dropdown-menu {
		margin-top: -3px;
		li{
			padding: 0; // .5em 0;
			a:hover {
				text-decoration: none;
			}
		}
	}
}


// Navbar themes
//
// Additonal style for switching between navbars with theme-specific background.

// navbar-primary is a local style following BS4 patterns
$primary: #093552;
$primary-text: color-contrast($primary);
$navbar-primary-color:                 rgba($primary-text, .7) !default;
$navbar-primary-hover-color:           rgba($primary-text, .9) !default;
$navbar-primary-active-color:          $primary-text !default;
$navbar-primary-disabled-color:        rgba($primary-text, .25) !default;
$navbar-primary-toggler-icon-bg:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-primary-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
$navbar-primary-toggler-border-color:  rgba($primary, .1) !default;
$navbar-primary-brand-color:                 $navbar-primary-active-color !default;
$navbar-primary-brand-hover-color:           $navbar-primary-active-color !default;

.navbar-primary {
  background-color: $primary;
  .navbar-brand {
    color: $navbar-primary-brand-color;

    &:hover {
      color: $navbar-primary-brand-hover-color;
    }
  }

  .navbar-nav, .nav {
    .nav-link, .nav-link a {
      color: $navbar-primary-color !important;
    }
    .nav-link a, .nav-link .btn {
      &:hover {
        color: $navbar-primary-hover-color;
      }

      &.disabled {
        color: $navbar-primary-disabled-color;
      }
    }

    .show > .nav-link,
    .active > .nav-link,
    .nav-link.show,
    .nav-link.active {
      color: $navbar-primary-active-color;
    }
  }

  .navbar-toggler {
    color: $navbar-primary-color;
    border-color: $navbar-primary-toggler-border-color;
  }

  .navbar-toggler-icon {
    background-image: escape-svg($navbar-primary-toggler-icon-bg);
  }

  .navbar-text {
    color: $navbar-primary-color;
    a {
      color: $navbar-primary-active-color;

      &:hover {
        color: $navbar-primary-active-color;
      }
    }
  }
}

.dropdown-menu {
  background-color: $primary !important;
  color: $primary-text !important;
  &>li {
    padding:0;
  }
  &>li>a{
      padding: 0.1em 0.5em;
      display: block;
      clear: both;
      /* TODO for DLC-938 */
      color: $primary-text;
      text-decoration:none;
      &:hover {
        background-color:color-contrast($primary-text);
        color: $primary-text;
      }
  }
}
#autocomplete-popup li {
  color: $primary-text;	
  &:hover {
    background-color:color-contrast($primary);
    color: $primary;
  }
}

@media(min-width: 768px) {
	#topnavbar .topbarlogo {
		display: inline-block;
		letter-spacing: 0;
	}
}
@media(max-width: 991px) {
	#topnavbar .topbarlogo {
		display: inline-block;
		letter-spacing: 0;
	}
}
@media(min-width: 992px) {
	#topnavbar .topbarlogo {
		display: inline-block;
		margin: 0;
		letter-spacing: 1px;
		margin-top: 2px;
	}
}
@media(min-width: 1200px) {
	#navbar-container {
		width: 1190px;
		max-width:1190px;
	}
	#topnavbar .topbarlogo {
		display: inline-block;
		margin: 0;
		font-size: 16px;
		line-height: 18px;
		letter-spacing: 0;
		#topbarslash {
			padding-left: .2em;
			padding-right: .2em;
		}
	}
}
@media(max-width: 600px) {
	#topnavbar {
		font-size: 80%;
		line-height: 17px;
	}
	#cul_top-right .dropdown-toggle {
		margin-top: -1px;
	}
}
@media(max-width: 640px) {
	#topnavbar .topbarlogo {
		display: none;
	}
}

